--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,153 @@
-/* .App {
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: roboto, sans-serif;
+  padding: 2rem 0;
+}
+
+/* Main body styles */
+.container {
+  width: 75%;
+  margin: auto;
+  padding: 1rem;
+}
+
+.main-content {
+  width: 70%;
+  max-width: 900px;
+  margin: 2rem auto;
+  border: 1px solid slategray;
+  padding: 2rem;
+  border-radius: 5px;
+  box-shadow: 0px 4px 20px rgba(90, 90, 90, 0.9);
+  font-size: 1.125rem;
+}
+
+/* Table styles */
+table {
+  margin: 2rem auto;
+  width: 60%;
   text-align: center;
+  border-spacing: 8px;
+  border-radius: 5px;
+  border: 1px solid black;
+  box-shadow: 0 4px 8px 0 rgba(10, 10, 10, 0.2);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+thead {
+  text-align: right;
+  height: 3rem;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+th,
+td {
+  margin: 0.625rem;
+  border: 1px solid black;
+  border-radius: 5px;
+  padding: 0.3rem;
+  cursor: pointer;
+}
+
+th {
+  background: #a9dbdb;
+  height: 4rem;
+  font-size: 1.5rem;
+}
+
+td {
+  width: 3rem;
+}
+
+tr:nth-child(1) > td,
+tr > td:last-child {
+  background: lightgray;
+}
+
+.equal {
+  font-size: 1.2rem;
+  font-weight: 400;
+}
+
+#ac {
+  background: orange;
+}
+
+#equal {
+  background: seagreen;
+}
+
+button {
+  cursor: pointer;
+  padding: 0.5rem 1.5rem;
+  margin: 0 2rem;
+  background-color: teal;
+  border: none;
+  outline: none;
+  border-radius: 10px;
+  text-align: center;
+  font-size: 2rem;
+  color: #fff;
+}
+
+button:last-child {
+  background-color: red;
+  padding: 0.8rem 2rem;
+  margin-left: 0;
+  font-size: 1rem;
+}
+
+span {
+  font-size: 2rem;
+  font-weight: 600;
+}
+
+@media screen and (max-width: 1150px) {
+  .container {
+    width: 85%;
+  }
+
+  .main-content {
+    width: 80%;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@media screen and (max-width: 850px) {
+  body {
+    padding: 1rem 0;
+  }
+
+  .container {
+    width: 100%;
+  }
+
+  .main-content {
+    width: 80%;
+  }
 }
 
-.App-link {
-  color: #61dafb;
+@media screen and (max-width: 650px) {
+  .main-content {
+    width: 90%;
+  }
+
+  table {
+    width: 90%;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 450px) {
+  .main-content {
+    width: 100%;
+    padding: 1.2rem;
+    border-radius: 10px;
   }
-  to {
-    transform: rotate(360deg);
+
+  table {
+    width: 100%;
+    margin: 1.5rem auto;
   }
-} */
+}
